# moex_sentiment_backtest

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml
src/moex_sentiment_backtest/: cli.py  logging_config.py  settings.py  utils.py
src/moex_sentiment_backtest/backtest/: calendar.py  engine.py  metrics.py  portfolio.py  report.py  signals.py  simulate.py  trades.py
src/moex_sentiment_backtest/backtest/__pycache__/: engine._apply_fill_price-33.py312.1.nbc  engine._apply_fill_price-33.py312.2.nbc  engine._apply_fill_price-33.py312.3.nbc  engine._apply_fill_price-33.py312.nbi  engine._scan_exit-58.py312.1.nbc  engine._scan_exit-58.py312.2.nbc  engine._scan_exit-58.py312.nbi  engine.simulate_trades-132.py312.1.nbc  engine.simulate_trades-132.py312.2.nbc  engine.simulate_trades-132.py312.nbi
src/moex_sentiment_backtest/data/: benchmarks.py  moex.py  news.py
src/moex_sentiment_backtest/viz/: plots.py
tests/: test_calendar.py  test_metrics.py  test_settings.py
